# capscr-plugins

./: Cargo.toml  LICENSE  README.md  registry.json
borders/: Cargo.toml  README.md
borders/src/: lib.rs
capture-logger/: Cargo.toml  README.md  plugin.toml
capture-logger/src/: lib.rs
copy-file-path/: Cargo.toml  README.md  plugin.toml
copy-file-path/src/: lib.rs
desktop-toast/: Cargo.toml  README.md  plugin.toml
desktop-toast/src/: lib.rs
grayscale/: Cargo.toml  README.md  plugin.toml
grayscale/src/: lib.rs
hotbar/: Cargo.toml
hotbar/src/: lib.rs
scripts/: build-zips.mjs
sounds/: Cargo.toml
sounds/src/: lib.rs
webhook-notify/: Cargo.toml  README.md  plugin.toml
webhook-notify/src/: lib.rs
